--- a/scripts/install
+++ b/scripts/install
@@ -191,6 +191,13 @@ eval sqlite3 $final_path/app.db "$conf"
 conf="\"UPDATE user SET $(. <(echo -E echo $(<../conf/init_calibre_db_user))) WHERE ID=1\""
 eval sqlite3 $final_path/app.db "$conf"
 
+#Update Imagick policy as per https://github.com/janeczku/calibre-web/wiki/FAQ#what-to-do-if-cover-pictures-are-not-extracted-from-pdf-files
+ynh_replace_string --match_string="<policy domain="coder" rights="none" pattern="PDF" />" \
+		--replace_string="<policy domain="coder" rights="read" pattern="PDF" />" \
+		--target_file="/etc/ImageMagick-6/policy.xml"
+
+
+
 #=================================================
 # STORE THE CHECKSUM OF THE CONFIG FILE
 #=================================================
