--- a/scripts/install
+++ b/scripts/install
@@ -96,17 +96,17 @@ ynh_setup_source "$final_path"
 # INSTALL DEPENDENCIES
 #=================================================
 
-ynh_script_progression --message="Installing package dependencies..." --weight=30
+ynh_script_progression --message="Installing package dependencies..." --weight=80
 ynh_install_app_dependencies $PKG_DEPENDENCIES
 
 #use latest version of pip as per documentation in https://github.com/pypa/get-pip
 #cannot use helper as maintaining the checksum would be a pain in the a***
-curl https://bootstrap.pypa.io/get-pip.py | python3
+ynh_exec_quiet curl https://bootstrap.pypa.io/get-pip.py | python3
 
-ynh_script_progression --message="Installing pip requirements..." --weight=50
+ynh_script_progression --message="Installing pip requirements..." --weight=40
 pip3 install --no-cache-dir --target $final_path/vendor -r $final_path/requirements.txt
 
-ynh_script_progression --message="Installing pip additionnal requirements..." --weight=60
+ynh_script_progression --message="Installing pip additionnal requirements..." --weight=40
 pip3 install --no-cache-dir --upgrade --target $final_path/vendor -r $final_path/optional-requirements.txt
 
 #=================================================
