fix revert patch

--- a/scripts/install
+++ b/scripts/install
@@ -37,7 +37,7 @@ ynh_setup_source --dest_dir="$install_dir"
 
 # Remove the patch for web.py in case visitor are allowed
 if $(ynh_permission_has_user --permission=main --user=visitors); then
-	patch -u /$install_dir/cps/web.py -i ../conf/web.py.revert.patch
+	patch -u /$install_dir/cps/web.py -i ../conf/main-web.py.revert.patch
 fi
 
 #install kepubify converter
