--- a/scripts/install
+++ b/scripts/install
@@ -96,7 +96,7 @@ ynh_script_progression --message="Setting up system configuration..." --weight=5
 #Cannot use empty string for X-script-name, causes an issue in the python prg
 #https://github.com/janeczku/calibre-web/wiki/Setup-Reverse-Proxy#nginx
 if [ $path = "/" ] ; then
-	ynh_replace_string "        proxy_set_header	X-Script-Name" "#        proxy_set_header	X-Script-Name" ../conf/nginx.conf
+	ynh_replace_string "        proxy_set_header	X-Script-Name		__PATH__;" "proxy_set_header	X-Script-Name		__PATH__/;" ../conf/nginx.conf
 fi
 
 #
