--- a/doc/PRE_UPGRADE.d/0.96.24~ynh2.md
+++ b/doc/PRE_UPGRADE.d/0.96.24~ynh2.md
@@ -1,4 +1,4 @@
-This version will
-  - fix Kobo sync when calibre-web is on its own subdomain
-  - Fix numerous pip warning during install/upgrade
+This new version of the package will
+  - fix Kobo sync when calibre-web is on its own subdomain (Thanks to Thovi98 for the fix)
+  - Fix numerous unwanted pip warnings during install/upgrade
   - Switch package to v2.1 packaging
