Issue in changelog

--- a/doc/PRE_UPGRADE.d/0.96.25~ynh3.md
+++ b/doc/PRE_UPGRADE.d/0.96.25~ynh3.md
@@ -1,4 +1,2 @@
 #Changelog:
-- Fix backup always backuping library folder, even if do_not_backup_data or BACKUP_CORE_ONLY was set
-- various syntax improvement
-- Fix doc regarding Kobo sync in subdomain
+ - Fix Logout issue : Thanks to otm33GH
